fix: overflow-x-auto problem

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -94,7 +94,6 @@ $font-family-sans-serif:
 // post
 .post {
   .post-content {
-    overflow-x: auto;
     blockquote {
       padding: 0 1em;
       color: $text-muted;
